# deskclaw

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  connection.rs  crypto.rs  mod.rs  sessions.rs  settings.rs  updates.rs
src-tauri/src/crypto/: identity.rs  mod.rs  vault.rs
src-tauri/src/events/: mod.rs
src-tauri/src/gateway/: client.rs  handshake.rs  mod.rs  protocol.rs
src-tauri/src/ssh/: auth.rs  tunnel.rs
src-tauri/src/state/: app_state.rs
src/components/: ErrorBoundary.tsx
src/components/chat/: AgentStatus.tsx  AttachmentPreview.tsx  ChatView.tsx  ContextBar.tsx  EmojiPicker.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  VoiceRecorder.tsx
src/components/connection/: AccountEditorDialog.tsx  AccountItem.tsx  AccountSelector.tsx  ConnectionForm.tsx  ConnectionScreen.tsx  ConnectionStatus.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TitleBar.tsx
src/components/sessions/: SessionItem.tsx  SessionList.tsx
src/components/settings/: SettingsDialog.tsx  SettingsForm.tsx
src/hooks/: useTauriEvents.ts  useUpdateCheck.ts
src/lib/: constants.ts  emoji.ts  platform.ts  tauri.ts  types.ts
src/store/: chatStore.ts  connectionStore.ts  sessionStore.ts  settingsStore.ts
src/styles/: animations.css  global.css
(+7 files in other folders)
