[package]
name = "deskclaw"
version = "0.1.4"
edition = "2021"

[lib]
name = "deskclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

tokio = { version = "1", features = ["full"] }

russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"


tokio-tungstenite = "0.24"
futures-util = "0.3"

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
